--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -104,19 +104,19 @@ h1 {
   margin-bottom: 16px;
   font-weight: 800;
 }
-h1 {
+/* h1 {
   font-size: 24px;
   line-height: 64px;
   letter-spacing: 0;
-}
+} */
+/* 
 
-/* Larger than phablet */
-@media (min-width: 550px) {
+@media (min-width: 1030px) {
   h1 {
     font-size: 48px;
-    line-height: 96px;
+    line-height: 50px;
   }
-}
+} */
 
 p {
   margin-top: 0;
