--- a/css/main.css
+++ b/css/main.css
@@ -50,10 +50,11 @@ h1 {
   text-decoration: none;
   letter-spacing: normal;
   text-transform: none;
-  line-height: normal;
+  line-height: 3.2em;
 }
 .frontApp .Logo a {
   display: block;
+  white-space: nowrap;
 }
 @media only screen and (max-width: 1000px) {
   .frontApp .Logo a {
@@ -84,6 +85,7 @@ h1 {
   align-items: center;
   justify-content: center;
   z-index: 2;
+  outline: none;
 }
 .frontApp .MainMenuLinks .linkWrapper {
   position: relative;
@@ -459,6 +461,27 @@ html {
     grid-gap: 1.5em; /* Use grid-gap from .frontApp .Page .threetwosquare */
     margin-top: 3em; 
     height: auto; 
+}
+/* SingleImageBg */
+
+.frontApp .SingleImageBg {
+  overflow: hidden;
+  background-position: center center;
+  background-repeat: no-repeat;
+  width: 100%;
+}
+.frontApp .SingleImageBg .theBgImgDiv {
+  background-attachment: inherit;
+  background-position: inherit;
+  background-repeat: inherit;
+  background-size: inherit;
+  background-position-y: inherit;
+  background-position-x: inherit;
+  width: 100%;
+  height: 100%;
+}
+.frontApp .SingleImageBg .theBgImgDiv.rounded {
+  border-radius: 2em;
 }
 
 /* Fade-in Animation */
